Working with Qt...

--- a/TxtMsg2File/source/CMakeLists.txt
+++ b/TxtMsg2File/source/CMakeLists.txt
@@ -10,20 +10,43 @@ project(TxtMsg2File
 		LANGUAGES CXX
 )
 
+#======================= INCLUSION OF Qt =======================#
+
+# In many cases, Qt won’t be installed in one of CMake’s default search locations. Developers will typically need to provide that information to CMake using the CMAKE_PREFIX_PATH cache variable.
+set(CMAKE_PREFIX_PATH $ENV{QTDIR})
+
+# Qt provides a number of command-line tools which process sources and generate other source files to be consumed by the build. The three most important and heavily used of these tools are moc, uic and rcc.
+#
+# Set the AUTOMOC, AUTOUIC, and AUTORCC target properties to true.
+set(CMAKE_AUTOMOC YES)
+set(CMAKE_AUTOUIC YES)
+set(CMAKE_AUTORCC YES)
+
+# Locates an installation of Qt or terminates with an error msg.
+find_package(Qt5 5.9 REQUIRED
+	COMPONENTS	Core Gui Widgets
+	#OPTIONAL_COMPONENT 
+)
+
+#===========================#
+
 # GLOBING -- NOT RECOMMENDED
 # file(GLOB_RECURSE SOURCE_FILES 
 	# src/*.cpp
 	# )
 
+
+#=================== SETUP EXECTUABLE ====================#
 # Create executable
 add_executable(TxtMsg2FileBinary)
 
 # Target declaration - Option  1
+# ------------------------------
 # A target maps to a build artifact in the project. Any target has a collection of properties.	
 #add_executable(TxtMsg2FileBinary main.cpp ${SOURCE_FILES})
 
-
 # Target declaration - Option  2
+# ------------------------------
 # This command tells CMake to create an executable from a set of 
 # source implementation files and main.
 # add_executable(
@@ -39,6 +62,7 @@ add_executable(TxtMsg2FileBinary)
 # )
 
 # Target declaration - Option  3
+# ------------------------------
 target_sources(TxtMsg2FileBinary
 	PRIVATE
 		src/mainwindow.cpp
@@ -60,3 +84,11 @@ target_include_directories(TxtMsg2FileBinary
 		${CMAKE_CURRENT_SOURCE_DIR}/include
 )
 
+#If successful, the find_package() call will define an imported target for each component found. These imported targets will be named Qt5::<ModuleName>, such as Qt5::Gui, Qt5::Widgets, etc. When project targets link against these imported targets, they will automatically have the relevant compiler defines, header search paths and library dependencies added to them.
+
+#==== LINKING Qt LIBRARIES ====#
+target_link_libraries(TxtMsg2FileBinary 
+	PRIVATE
+		Qt5::Core
+		Qt5::Gui
+)
